--- a/shipping.html
+++ b/shipping.html
@@ -467,13 +467,13 @@
     <!-- Header -->
     <header id="header">
         <div class="container header-container">
-            <a href="pin.html" class="logo">
+            <a href="index.html" class="logo">
                 <img src="pinnaclelogo.png" alt="Pinnacle Talent Management" class="logo">
             </a>
             
             <nav>
                 <ul id="navMenu">
-                    <li><a href="pin.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="talent.html">Talent</a></li>
                     <li><a href="merch.html">Merch</a></li>
                     <li>
@@ -538,7 +538,7 @@
                 </ul>
 
                 <h3>3. How to Return</h3>
-                <p>To initiate a return, contact us at merch@pinnacletalent.com with your order number and reason for return. We will provide return instructions. Return shipping is the responsibility of the customer unless the item is defective.</p>
+                <p>To initiate a return, contact us at pinnacletalentmanagement1@gmail.com with your order number and reason for return. We will provide return instructions. Return shipping is the responsibility of the customer unless the item is defective.</p>
 
                 <h3>4. Refunds</h3>
                 <p>Once we receive and inspect the returned item, we will notify you. If approved:</p>
@@ -552,7 +552,7 @@
 
                 <h2>Questions?</h2>
                 <p>Contact our customer support at:</p>
-                <p>Email: merch@pinnacletalent.com</p>
+                <p>Email: pinnacletalentmanagement1@gmail.com</p>
             </div>
         </div>
     </section>
@@ -575,7 +575,7 @@
                 <div class="footer-links">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="pin.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="talent.html">Talent</a></li>
                         <li><a href="merch.html">Merch</a></li>
                     </ul>
