--- a/terms.html
+++ b/terms.html
@@ -467,13 +467,13 @@
     <!-- Header -->
     <header id="header">
         <div class="container header-container">
-            <a href="pin.html" class="logo">
+            <a href="index.html" class="logo">
                 <img src="pinnaclelogo.png" alt="Pinnacle Talent Management" class="logo">
             </a>
             
             <nav>
                 <ul id="navMenu">
-                    <li><a href="pin.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="talent.html">Talent</a></li>
                     <li><a href="merch.html">Merch</a></li>
                     <li>
@@ -555,7 +555,7 @@
                 <div class="footer-links">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="pin.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="talent.html">Talent</a></li>
                         <li><a href="merch.html">Merch</a></li>
                     </ul>
