--- a/cookie.html
+++ b/cookie.html
@@ -477,7 +477,7 @@
                     <li><a href="talent.html">Talent</a></li>
                     <li><a href="merch.html">Merch</a></li>
                     <li>
-                        <a href="#" class="cart-icon">
+                        <a href="cart.html" class="cart-icon">
                             <i class="fas fa-shopping-bag"></i>
                             <span class="cart-count">0</span>
                         </a>
