--- a/merch.html
+++ b/merch.html
@@ -705,7 +705,7 @@
                     <li><a href="talent.html">Talent</a></li>
                     <li><a href="merch.html">Merch</a></li>
                     <li>
-                        <a href="#" class="cart-icon">
+                        <a href="cart.html" class="cart-icon">
                             <i class="fas fa-shopping-bag"></i>
                             <span class="cart-count">0</span>
                         </a>
@@ -844,57 +844,58 @@
                 ]
             },
             {
-                id: 'champion-hoodie',
-                name: 'Champion Hoodie',
+                id: 'pinnacle-logo-tee',
+                name: 'Pinnacle Logo Tee',
                 category: 'apparel',
-                price: 85.00,
-                description: 'Premium heavyweight hoodie with "Champion" embroidered across the chest. Features a kangaroo pocket and adjustable drawstring hood.',
-                sizes: ['S', 'M', 'L', 'XL'],
-                images: [
-                    'https://images.unsplash.com/photo-1527719327859-c6ce80353573?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
-                    'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
-                    'https://images.unsplash.com/photo-1527719327859-c6ce80353573?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'
-                ]
-            },
-            {
-                id: 'training-cap',
-                name: 'Training Cap',
-                category: 'accessories',
-                price: 35.00,
-                description: 'Performance training cap with moisture-wicking technology and adjustable strap. Features the Pinnacle logo on the front panel.',
-                sizes: ['One Size'],
-                images: [
-                    'https://images.unsplash.com/photo-1583743814966-8936f5b7be1a?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
-                    'https://images.unsplash.com/photo-1583743814966-8936f5b7be1a?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
-                    'https://images.unsplash.com/photo-1583743814966-8936f5b7be1a?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'
-                ]
-            },
-            {
-                id: 'limited-box-set',
-                name: 'Limited Edition Box Set',
-                category: 'collectibles',
-                price: 120.00,
-                description: 'Exclusive collector\'s box set featuring signed memorabilia from our top talent, including a photo book, exclusive merch, and digital content.',
-                sizes: ['One Size'],
-                images: [
-                    'https://images.unsplash.com/photo-1620799140408-edc6dcb6d633?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
-                    'https://images.unsplash.com/photo-1620799140408-edc6dcb6d633?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
-                    'https://images.unsplash.com/photo-1620799140408-edc6dcb6d633?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'
-                ]
-            },
-            {
-                id: 'performance-tee',
-                name: 'Performance Training Tee',
-                category: 'apparel',
-                price: 55.00,
-                description: 'High-performance training shirt with moisture-wicking technology and anti-odor treatment. Designed for athletes by athletes.',
-                sizes: ['S', 'M', 'L', 'XL'],
+                price: 45.00,
+                description: 'Classic black t-shirt featuring the Pinnacle Talent Management logo in premium embroidery. Made from 100% organic cotton for maximum comfort.',
+                sizes: ['S', 'M', 'L', 'XL', 'XXL'],
                 images: [
                     'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
                     'https://images.unsplash.com/photo-1527719327859-c6ce80353573?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
                     'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'
                 ]
-            }
+            },
+            {
+                id: 'pinnacle-logo-tee',
+                name: 'Pinnacle Logo Tee',
+                category: 'apparel',
+                price: 45.00,
+                description: 'Classic black t-shirt featuring the Pinnacle Talent Management logo in premium embroidery. Made from 100% organic cotton for maximum comfort.',
+                sizes: ['S', 'M', 'L', 'XL', 'XXL'],
+                images: [
+                    'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
+                    'https://images.unsplash.com/photo-1527719327859-c6ce80353573?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
+                    'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'
+                ]
+            },
+            {
+                id: 'pinnacle-logo-tee',
+                name: 'Pinnacle Logo Tee',
+                category: 'apparel',
+                price: 45.00,
+                description: 'Classic black t-shirt featuring the Pinnacle Talent Management logo in premium embroidery. Made from 100% organic cotton for maximum comfort.',
+                sizes: ['S', 'M', 'L', 'XL', 'XXL'],
+                images: [
+                    'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
+                    'https://images.unsplash.com/photo-1527719327859-c6ce80353573?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
+                    'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'
+                ]
+            },
+            {
+                id: 'pinnacle-logo-tee',
+                name: 'Pinnacle Logo Tee',
+                category: 'apparel',
+                price: 45.00,
+                description: 'Classic black t-shirt featuring the Pinnacle Talent Management logo in premium embroidery. Made from 100% organic cotton for maximum comfort.',
+                sizes: ['S', 'M', 'L', 'XL', 'XXL'],
+                images: [
+                    'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
+                    'https://images.unsplash.com/photo-1527719327859-c6ce80353573?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
+                    'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'
+                ]
+            },
+
         ];
 
         // Global variables
