--- a/talent.html
+++ b/talent.html
@@ -637,7 +637,7 @@
                     <li><a href="talent.html">Talent</a></li>
                     <li><a href="merch.html">Merch</a></li>
                     <li>
-                        <a href="#" class="cart-icon">
+                        <a href="cart.html" class="cart-icon">
                             <i class="fas fa-shopping-bag"></i>
                             <span class="cart-count">0</span>
                         </a>
@@ -776,7 +776,7 @@
                 id: 'salt-papi',
                 name: 'Salt Papi',
                 category: 'athletes',
-                image: '#',
+                image: 'saltpin.jpg',
                 stats: [
                     { title: 'Record', value: '5-0' },
                     { title: 'KOs', value: '4' },
@@ -789,7 +789,7 @@
                 id: 'fox',
                 name: 'FoxTheG',
                 category: 'athletes',
-                image: '#',
+                image: 'foxpin.jpg',
                 stats: [
                     { title: 'Record', value: '5-0' },
                     { title: 'KOs', value: '4' },
@@ -802,7 +802,7 @@
                 id: 'dawood-savage',
                 name: 'Dawood Savage',
                 category: 'athletes',
-                image: '#',
+                image: 'dawoodpin.jpg',
                 stats: [
                     { title: 'Record', value: '5-0' },
                     { title: 'KOs', value: '4' },
@@ -813,9 +813,9 @@
             },
             {
                 id: 'pully',
-                name: 'FoxTheG',
+                name: 'Pully Arif',
                 category: 'athletes',
-                image: '#',
+                image: 'pullypin.jpg',
                 stats: [
                     { title: 'Record', value: '5-0' },
                     { title: 'KOs', value: '4' },
@@ -825,10 +825,10 @@
                 bio: 'Salt Papi is a rising star in the boxing world with an undefeated record and knockout power. Known for his technical precision and explosive power, he has quickly become a fan favorite in the combat sports community.'
             },
             {
-                id: 'salt-papi',
-                name: 'Salt Papi',
+                id: 'ginty',
+                name: 'Ginty',
                 category: 'athletes',
-                image: '#',
+                image: 'gintypin.jpg',
                 stats: [
                     { title: 'Record', value: '5-0' },
                     { title: 'KOs', value: '4' },
@@ -838,10 +838,10 @@
                 bio: 'Salt Papi is a rising star in the boxing world with an undefeated record and knockout power. Known for his technical precision and explosive power, he has quickly become a fan favorite in the combat sports community.'
             },
             {
-                id: 'fox',
-                name: 'FoxTheG',
+                id: 'charlessy',
+                name: 'Charlessy',
                 category: 'athletes',
-                image: '#',
+                image: 'charlessypin.jpg',
                 stats: [
                     { title: 'Record', value: '5-0' },
                     { title: 'KOs', value: '4' },
@@ -851,10 +851,10 @@
                 bio: 'Salt Papi is a rising star in the boxing world with an undefeated record and knockout power. Known for his technical precision and explosive power, he has quickly become a fan favorite in the combat sports community.'
             },
             {
-                id: 'salt-papi',
-                name: 'Salt Papi',
+                id: 'lil-belsy',
+                name: 'Little Bellsy',
                 category: 'athletes',
-                image: '#',
+                image: 'bellsypin.jpg',
                 stats: [
                     { title: 'Record', value: '5-0' },
                     { title: 'KOs', value: '4' },
@@ -864,10 +864,10 @@
                 bio: 'Salt Papi is a rising star in the boxing world with an undefeated record and knockout power. Known for his technical precision and explosive power, he has quickly become a fan favorite in the combat sports community.'
             },
             {
-                id: 'fox',
-                name: 'FoxTheG',
+                id: 'luke-nevin',
+                name: 'Luke Nevin',
                 category: 'athletes',
-                image: '#',
+                image: 'lukepin.jpg',
                 stats: [
                     { title: 'Record', value: '5-0' },
                     { title: 'KOs', value: '4' },
@@ -877,10 +877,10 @@
                 bio: 'Salt Papi is a rising star in the boxing world with an undefeated record and knockout power. Known for his technical precision and explosive power, he has quickly become a fan favorite in the combat sports community.'
             },
             {
-                id: 'salt-papi',
-                name: 'Salt Papi',
+                id: 'jordan-gayle',
+                name: 'Jordan Gayle',
                 category: 'athletes',
-                image: '#',
+                image: 'jordanpin.jpg',
                 stats: [
                     { title: 'Record', value: '5-0' },
                     { title: 'KOs', value: '4' },
