--- a/merch.html
+++ b/merch.html
@@ -752,7 +752,7 @@
                     <div class="social-links">
                         <a href="https://www.instagram.com/pinnacle_talentmanagement/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-tiktok"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="https://x.com/Pinnacle_mgmt"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
@@ -838,9 +838,9 @@
                 description: 'Classic black t-shirt featuring the Pinnacle Talent Management logo in premium embroidery. Made from 100% organic cotton for maximum comfort.',
                 sizes: ['S', 'M', 'L', 'XL', 'XXL'],
                 images: [
-                    'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
-                    'https://images.unsplash.com/photo-1527719327859-c6ce80353573?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
-                    'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'
+                    'logoteeangle.jpg',
+                    'logoteefront.jpg',
+                    'logoteeback.jpg'
                 ]
             },
             {
@@ -851,9 +851,9 @@
                 description: 'Classic black t-shirt featuring the Pinnacle Talent Management logo in premium embroidery. Made from 100% organic cotton for maximum comfort.',
                 sizes: ['S', 'M', 'L', 'XL', 'XXL'],
                 images: [
-                    'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
-                    'https://images.unsplash.com/photo-1527719327859-c6ce80353573?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
-                    'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'
+                    'logoteeangle.jpg',
+                    'logoteefront.jpg',
+                    'logoteeback.jpg'
                 ]
             },
             {
@@ -864,9 +864,9 @@
                 description: 'Classic black t-shirt featuring the Pinnacle Talent Management logo in premium embroidery. Made from 100% organic cotton for maximum comfort.',
                 sizes: ['S', 'M', 'L', 'XL', 'XXL'],
                 images: [
-                    'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
-                    'https://images.unsplash.com/photo-1527719327859-c6ce80353573?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
-                    'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'
+                    'logoteeangle.jpg',
+                    'logoteefront.jpg',
+                    'logoteeback.jpg'
                 ]
             },
             {
@@ -877,9 +877,9 @@
                 description: 'Classic black t-shirt featuring the Pinnacle Talent Management logo in premium embroidery. Made from 100% organic cotton for maximum comfort.',
                 sizes: ['S', 'M', 'L', 'XL', 'XXL'],
                 images: [
-                    'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
-                    'https://images.unsplash.com/photo-1527719327859-c6ce80353573?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
-                    'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'
+                    'logoteeangle.jpg',
+                    'logoteefront.jpg',
+                    'logoteeback.jpg'
                 ]
             },
             {
@@ -890,9 +890,9 @@
                 description: 'Classic black t-shirt featuring the Pinnacle Talent Management logo in premium embroidery. Made from 100% organic cotton for maximum comfort.',
                 sizes: ['S', 'M', 'L', 'XL', 'XXL'],
                 images: [
-                    'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
-                    'https://images.unsplash.com/photo-1527719327859-c6ce80353573?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80',
-                    'https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'
+                    'logoteeangle.jpg',
+                    'logoteefront.jpg',
+                    'logoteeback.jpg'
                 ]
             },
 
