--- a/cookie.html
+++ b/cookie.html
@@ -534,7 +534,7 @@
                     <div class="social-links">
                         <a href="https://www.instagram.com/pinnacle_talentmanagement/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-tiktok"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="https://x.com/Pinnacle_mgmt"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
