--- a/index.html
+++ b/index.html
@@ -547,7 +547,6 @@
         }
         
         .footer-logo {
-            height: 90px;
             margin-bottom: 20px;
             filter: brightness(0) invert(1);
         }
@@ -1151,13 +1150,10 @@
 
     <!-- About Section -->
     <section class="about-section" id="about">
-        <div class="container">
-            <h2 class="section-title">ABOUT PINNACLE</h2>
-            <p class="section-subtitle">Redefining talent management for the digital age</p>
-            
+        <div class="container">            
             <div class="about-container">
                 <div class="about-content">
-                    <h3>Redefining Talent Management</h3>
+                    <h3>ABOUT PINNACLE</h3>
                     <p>Founded in 2025, Pinnacle Talent Management was born from a vision to bridge the gap between traditional talent representation and the rapidly evolving digital landscape.</p>
                     <p>We recognized that the entertainment industry was changing, and the creators, athletes, and influencers of tomorrow needed a new kind of representation—one that understood both the creative and business sides of building a lasting brand.</p>
                     <p>Today, we represent some of the most influential figures across social media, sports, and entertainment, helping them maximize their potential through strategic partnerships, brand development, and innovative content strategies.</p>
